Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/TargetType13.out
TargetType13.java:19:13: compiler.err.unreported.exception.need.to.catch.or.throw: java.lang.Exception
1 error
